2022-10-26T08:30:12Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3327408373 # 555
* notice: last 14d: unq all: 3 31
* notice: prev accum: outdated-unq outdated-all / unq all: 367 574 / 389 613
* notice: next accum: outdated-unq outdated-all / unq all: 367 574 / 384 605
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -6 -9 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-10-12 2022-10-26]

2022-10-26T02:18:56Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3325701049 # 554
* notice: last 14d: unq all: 9 39
* notice: prev accum: outdated-unq outdated-all / unq all: 367 574 / 388 611
* notice: next accum: outdated-unq outdated-all / unq all: 367 574 / 389 613
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [] / [2022-10-25]

2022-10-25T16:49:58Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3322776243 # 553
* notice: last 14d: unq all: 8 37
* notice: prev accum: outdated-unq outdated-all / unq all: 366 572 / 388 610
* notice: next accum: outdated-unq outdated-all / unq all: 367 574 / 388 611
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-10-11] / []

2022-10-25T08:41:26Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3319416493 # 552
* notice: last 14d: unq all: 8 38
* notice: prev accum: outdated-unq outdated-all / unq all: 366 572 / 387 610
* notice: next accum: outdated-unq outdated-all / unq all: 366 572 / 388 610
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-10-11 2022-10-25]

2022-10-24T16:41:13Z: