@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-10-26T08:30:12Z",
+  "timestamp" : "2022-10-26T16:35:36Z",
   "count_outdated" : 574,
   "uniques_outdated" : 367,
-  "count" : 605,
+  "count" : 606,
   "uniques" : 384,
   "clones" : [
     {
@@ -105,8 +105,8 @@
     },
     {
       "timestamp": "2022-10-26T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
