@@ -1,3 +1,11 @@
+2022-10-26T16:35:36Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3330848918 # 556
+* notice: last 14d: unq all: 3 32
+* notice: prev accum: outdated-unq outdated-all / unq all: 367 574 / 384 605
+* notice: next accum: outdated-unq outdated-all / unq all: 367 574 / 384 606
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-10-26]
+
 2022-10-26T08:30:12Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3327408373 # 555
 * notice: last 14d: unq all: 3 31
